--- a/src/assets/css/pages.css
+++ b/src/assets/css/pages.css
@@ -107,7 +107,7 @@ p{
    }
 
    .intro{
-      font-size: 34px;
+      font-size: 36px;
    }
 
    .container{
